deploy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-public
spec:
  podSelector:
    matchLabels:
      app: phasma
      tier: frontend
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-from-frontend
spec:
  podSelector:
    matchLabels:
      app: phasma
      tier: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: phasma
          tier: frontend
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-database-from-apps
spec:
  podSelector:
    matchLabels:
      app: phasma
      tier: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: phasma
          tier: backend
    - podSelector:
        matchLabels:
          app: phasma
          tier: broker
    ports:
    - protocol: TCP
      port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cache-from-backend
spec:
  podSelector:
    matchLabels:
      app: phasma
      tier: cache
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: phasma
          tier: backend
    ports:
    - protocol: TCP
      port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-search-from-apps
spec:
  podSelector:
    matchLabels:
      app: phasma
      tier: search
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: phasma
          tier: backend
    - podSelector:
        matchLabels:
          app: phasma
          tier: broker
    ports:
    - protocol: TCP
      port: 7700
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-storage-from-apps
spec:
  podSelector:
    matchLabels:
      app: phasma
      tier: storage
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: phasma
          tier: backend
    - podSelector:
        matchLabels:
          app: phasma
          tier: broker
    ports:
    - protocol: TCP
      port: 8333
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-broker-kafka-from-apps
spec:
  podSelector:
    matchLabels:
      app: phasma
      tier: broker
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: phasma
          tier: backend
    - podSelector:
        matchLabels:
          app: phasma
          tier: broker
    ports:
    - protocol: TCP
      port: 9092
